Feat: Enklere oppstart og healthcheck. Sonar fix.